--- a/login.html
+++ b/login.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <title>MovieMate</title>
@@ -21,10 +21,45 @@
                     Username/E-mail:
                     <input type="text" name="loginname"><br>
                     Password:
-                    <input type="text" name="loginname"><br>
+                    <input type="text" name="password"><br>
+					<input type="submit" name="send" value="Skicka"/>
                 </form>
             </div>
         </div>
+			<?php
+				$uname = "dbtrain_951";
+				$pass = "pqwkjl";
+				$host = "dbtrain.im.uu.se";
+				$dbname = "dbtrain_951";
+				$connection = new mysqli($host, $uname, $pass, $dbname);
+
+				if($connection->connect_error)
+					{
+						die("Connection failed: ".$connection.connect_error);
+					}
+						echo "Connection worked.";
+				
+
+			?>
+		<script>
+		function Validate(mail)
+		{
+			var retur = /^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/;		//Fixa denna så att den enbart kollar .@.
+			if(document.form.loginname.value == "") 				// Kollar om "namn" i form är tom  OBS!! Fixa så att en tom sträng inte fungerar för att uppfylla detta villkor!!
+			{
+				alert("Du har missat att fylla i namn");
+				return false;
+			} 
+			else if(document.form.password.value == "")	// Kollar om "m i form är skrivet i rätt format i form.
+			{
+				alert("Felaktigt format på lösenord");
+				return false;
+			}
+			else
+			{
+				document.form.submit();
+			}
+		}
+		</script>
     </body>
 </html>
-
