--- a/index.html
+++ b/index.html
@@ -4,22 +4,14 @@
         <title>MovieMate</title>
         <link rel="stylesheet" href="css/main.css">
         <meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <header>
-            <div class="navbar">
-                <a href="#">MovieMate</a>
-                <a href="#">Browse</a>
-                <a href="#">Search</a>
-                <a href="#">Login</a>
-            </div>
-        </header>
+        <object type="text/html" class='navbarObject' data="navbar.html"></object>
         <div class="topfeed">
             <div class="feedtopic">
                 Popular
             </div>
-
         </div>
 
         <div class="article">
