--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <object type="text/html" class='navbarObject' data="navbar.html"></object>
+        <div class='navbarDiv'><object type="text/html"  data="navbar.html" ></object></div>
         <div class="topfeed">
             <div class="feedtopic">
                 Popular
