--- a/navbar.html
+++ b/navbar.html
@@ -19,18 +19,16 @@
 
 </head>
 
-<body>
-   <nav class="navbar navbar-expand-lg navbar-light red darken-4" style="min-height: 7vh; max-height:7vh">
-            <a class="navbar-brand nav-link active" href="#">MovieMate</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                    <a class="nav-item nav-link" href="#">Browse</a>
-                    <a class="nav-item nav-link" href="#">Search</a>
-                    <a class="nav-item nav-link" href="#">Login</a>
-                </div>
+   <nav class="navbar navbar-expand-lg navbar-light red darken-4" >
+        <a class="navbar-brand nav-link active" href="#">MovieMate</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-item nav-link" href="#">Browse</a>
+                <a class="nav-item nav-link" href="#">Search</a>
+                <a class="nav-item nav-link" href="#">Login</a>
             </div>
-        </nav>
-</body>
+        </div>
+    </nav>
